--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ description: Yoga que cura al alma
 author:
   name: Cecilia Caserotto
   image: 3.png
-  say-hello: <strong>Hola, soy Ceci</strong></br> quiero invitarte a que vivas una hermosa experiencia de <strong>yoga en la playa</strong>
+  say-hello: <strong>Hola, soy Ceci</strong></br> y quiero invitarte a que vivas una hermosa experiencia de <strong>yoga en la playa</strong>
   bio: Si querés relajarte y conectar con tus deseos te invito a que te sumes a nuestros encuentros. Son clases a la gorra, para todos los géneros y edades, y no hace falta que tengas ningún conocimiento previo. 
   footer: Encontrame todos los días a las 19:30 hs. en El Náutico, parador <strong>AP SURF</strong>.
 
@@ -23,13 +23,13 @@ facebook: https://facebook.com/ # Add your Facebook handle
 instagram: https://www.instagram.com/ceciliacaserotto/
 
 buttons:
-    - text: Reservas
-      link: https://form.com
+    - text: Quiero sumarme!
+      link: https://forms.gle/vNhX3BgzGzs9Yvxy6
     - text: Seguime en Instagram 
       link: https://www.instagram.com/ceciliacaserotto/
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: cecicaserotto # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
